Final touches in the read.me and folder layouts.

--- a/.gitignore
+++ b/.gitignore
@@ -162,7 +162,8 @@ cython_debug/
 #.idea/
 
 # Ignore the datasets folder
-screenshots/
-datasets/
+screenshots/preds/*
+screenshots/training
+datasets/*
 yolo11n.pt
 Original/
